Fix dtae/time input width on mobile

--- a/style.css
+++ b/style.css
@@ -131,10 +131,10 @@ input[type="radio"] {
     justify-self: end;
 }
 
-/* input[type="date"],
+input[type="date"],
 input[type="time"] {
-    justify-self: center;
-} */
+    max-width: calc(var(--input-card-max-width) * 0.5);
+}
 
 .input-container {
     display: grid;
